Fix data integrity issues and add documentation on Firebase usage

--- a/.gitignore
+++ b/.gitignore
@@ -78,5 +78,7 @@ jspm_packages
 .node_repl_history
 
 
-## At least for now, don't commit built files
+## Don't commit built files
 dist/
+
+data/combined.json
